Added tab layout and shadow in the tab layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Yibber2</string>
     <string name="app_title">Yibber</string>
+    <string name="following">Following</string>
+    <string name="for_you">For You</string>
+    <string name="search">search</string>
 </resources>
