Added profile picture and timeline update data with more_horizontal icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="following">Following</string>
     <string name="for_you">For You</string>
     <string name="search">search</string>
+    <string name="username_1">billauthor</string>
+    <string name="user_1_timeline_update">Just now ꞏ Boston ꞏ 138 Plays</string>
 </resources>
