Added post action icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,10 @@
     <string name="more_horiz">more_horiz</string>
     <string name="post_img">post_img</string>
     <string name="user1_post_title">Californian Vibes</string>
-    <string name="user1_caption">Stop what you\'re doing! Listen to me and my mate <font fgcolor="#0000FF">@charlyjones</font> for the next hour.
+    <string name="post1_caption">Stop what you\'re doing! Listen to me and my mate <font fgcolor="#0000FF">@charlyjones</font> for the next hour.
         <font fgcolor="#0000FF">#california #venice #beach #vibes #yolo</font>
     </string>
+    <string name="post1_heart_react_count">59</string>
+    <string name="post1_comment_count">19</string>
+    <string name="post1_share_count">7</string>
 </resources>
